dfir_rs/tests/compile-fail/nightly/surface_singleton_nostate_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/nightly/surface_singleton_nostate_undefined.rs:6:76
  |
6 |             -> filter(|value| value <= #my_ref.as_reveal_ref() && value <= #unknown.as_reveal_ref())
  |                                                                            ^^^^^^^^

error: Cannot reference operator `null`. Use `singleton()`, `optional()`, or `handoff()` to create a referenceable name.
 --> tests/compile-fail/nightly/surface_singleton_nostate_undefined.rs:6:40
  |
6 |             -> filter(|value| value <= #my_ref.as_reveal_ref() && value <= #unknown.as_reveal_ref())
  |                                        ^^^^^^^
